# interview-notes

./: .gitignore  CMakeLists.txt
questions/01_dag_task_scheduler/: dag_task_scheduler.cpp
questions/02_smart_pointer/: readme.md  smart_pointer.cpp
questions/03_SPSC/: lockfree_queue_SPSC.cpp
questions/04_pub_sub_pattern/: publish_scribe_pattern.cpp
questions/05_shared_memory/: README.md  shared_memory_player.c
test/: dag_task_scheduler_test.cpp  shared_memory_player_test.c  spsc_queue_benchmark.cpp  spsc_queue_correctness.cpp
utils/: random.h  utils.cpp
